# py-actress

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
actress/: __init__.py  effect.py  lib.py  scheduler.py  task.py  task_methods.py  types.py
examples/: demo.py
test/: conftest.py  test_lib.py  test_task.py  utils.py
