[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actress"
version = "0.0.1"
authors = [{ name = "Alan Shaw", email = "alan@storacha.network" }]
description = "An implementation of actor in Python."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "Apache-2.0 OR MIT"
license-files = ["LICENSE.md"]

[project.urls]
Homepage = "https://github.com/storacha/py-actress"
Issues = "https://github.com/storacha/py-actress/issues"

[project.optional-dependencies]
dev = [
  "mypy>=1.19",
  "pylint>=4.0",
  "pytest>=9.0",
  "pytest-asyncio>=1.3",
  "pytest-cov>=7.0",
  "pytest-timeout>=2.4",
]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "-q", "--cov=actress", "--cov-report=html", "--cov-branch"]
testpaths = ["test"]
asyncio_mode = "auto"
timeout = "5"
